snapshots/parsers/cst/property_statements/property_set_preserves_whitespace.snap
---
source: src/parsers/cst/property_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PropertyStatement
      children:
        - kind: PropertyKeyword
          text: Property
        - kind: Whitespace
          text: "   "
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: "   "
        - kind: Identifier
          text: Container
        - kind: Whitespace
          text: "  "
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Whitespace
              text: "  "
            - kind: Identifier
              text: glistNN
            - kind: Whitespace
              text: "   "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: "   "
            - kind: Identifier
              text: gList
            - kind: Whitespace
              text: "  "
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: glistN
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: glistNN
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: "   "
        - kind: PropertyKeyword
          text: Property
        - kind: Newline
          text: "\n"
